# mp3

./: .gitignore  CMakeLists.txt  Makefile  README.md  app  codeAlls.cpp  mp3_player
include/assets/: assets.hpp
include/files/: files.hpp
include/mp3/: mp3.hpp  mp3_memory.hpp
others/: main.ss
scripts/: compile.sh  dependencies.sh  gen_code_all.sh  git_commit.sh  rules.gbd
src/: main.cc  main.cpp
src/files/: assets.cpp  files.cpp
src/mp3/: mp3.cpp  mp3_memory.cpp
src/utils/: player.cpp
